Updating Contact information and pages Section

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -6,6 +6,7 @@
     <div class="col-md-10 col-md-offset-1">
       {{ page.content | markdownify }}
     </div>
+    <img src="/img/notaryBanner.jpg" alt="">
   </div>
 </section>
 
