--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,6 +8,7 @@
     </div>
     <img src="/img/notaryBanner.jpg" alt="">
   </div>
+  <p><em>Keywords: POA documentation, living trust, notary Santa Clara, notary Cupertino, notary Campbell, notary near me, OCi, passport renewal, loan signing documents, Taiwan passport renewal</em></p>
 </section>
 
 <!-- About End -->
