--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -7,7 +7,8 @@
     <div class="elementor-widget-container">
       <li class="elementor-icon-list-item">
         <span class="elementor-icon-list-icon">
-          <a href="tel:{{ site.phone_number }}"> <span class="fa"&#xf095;>
+        
+          <a href="tel:{{ site.phone_number }}"> <span class="fa fa-phone">
               <i aria-hidden="true" class=""></i> </span>
             <span class="elementor-icon-list-text">{{ site.phone_number }}</span>
           </a>
