--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,4 +1,3 @@
-
 <!-- Navigation Start -->
 
 <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
@@ -8,18 +7,21 @@
         <i class="fa fa-bars"></i>
       </button>
       {% if page.section-type == "index" %}
-        <a class="navbar-brand page-scroll" href="#page-top">
-      {% else %}
+      <a class="navbar-brand page-scroll" href="#page-top">
+        {% else %}
         <a class="navbar-brand" href="{{site.baseurl}}/">
-      {% endif %}
+          {% endif %}
           <div>
-            {% if site.black-favicon %}
-              <img src="{{site.baseurl}}{{ site.black-favicon }}" alt="">
-            {% endif %}
-	    {% if site.logo %}
-	      <img id="logo_nav" src="{{site.baseurl}}/{{site.logo}}" alt="{{ site.title }}" />
-	    {% endif %}
-              {{ site.title }}
+            <!-- {% if site.black-favicon %}
+            <img src="{{site.baseurl}}{{ site.black-favicon }}" alt="">
+            {% endif %} -->
+            <!-- {% if site.logo %}
+            <img id="logo_nav" src="{{site.baseurl}}/{{site.logo}}" alt="{{ site.title }}" />
+            {% endif %} -->
+            <a href="tel:{{ site.phone_number }}"> <span class="fa fa-phone">
+                <i aria-hidden="true" class=""></i> </span>
+              <span class="elementor-icon-list-text">{{ site.phone_number }}</span>
+            </a>
           </div>
         </a>
     </div>
@@ -28,28 +30,28 @@
       <ul class="nav navbar-nav">
         {% if page.section-type == "index" %}
 
-          <!-- Scroll to section for each page in index -->
-          {% for p in site.pages_list %}
-            <li>
-              <a class="page-scroll" href="#{{ p[1] }}"> {{p[0]}} </a>
-            </li>
-          {% endfor %}
+        <!-- Scroll to section for each page in index -->
+        {% for p in site.pages_list %}
+        <li>
+          <a class="page-scroll" href="#{{ p[1] }}"> {{p[0]}} </a>
+        </li>
+        {% endfor %}
 
         {% else %}
-          <!-- Blog, Post, Tag and Error pages -->
-          {% for p in site.pages_list %}
-            <li>
-            {% if p[1] == "latest-post" %}
-              {% if page.url == "/blog/index.html" | prepend: {{site.baseurl}} %}
-                <a class="page-scroll" href="#page"> {{p[0]}} </a>
-              {% else %}
-                <a href="{{site.baseurl}}/blog/"> {{p[0]}} </a>
-              {% endif %}
-            {% else %}
-                <a href="{{site.baseurl}}/#{{ p[1] }}"> {{p[0]}} </a>
-            {% endif %}
-            </li>
-          {% endfor %}
+        <!-- Blog, Post, Tag and Error pages -->
+        {% for p in site.pages_list %}
+        <li>
+          {% if p[1] == "latest-post" %}
+          {% if page.url == "/blog/index.html" | prepend: {{site.baseurl}} %}
+          <a class="page-scroll" href="#page"> {{p[0]}} </a>
+          {% else %}
+          <a href="{{site.baseurl}}/blog/"> {{p[0]}} </a>
+          {% endif %}
+          {% else %}
+          <a href="{{site.baseurl}}/#{{ p[1] }}"> {{p[0]}} </a>
+          {% endif %}
+        </li>
+        {% endfor %}
         {% endif %}
       </ul>
     </div>
