Removing index image, Adding contcat in the first page

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -18,10 +18,10 @@
             <!-- {% if site.logo %}
             <img id="logo_nav" src="{{site.baseurl}}/{{site.logo}}" alt="{{ site.title }}" />
             {% endif %} -->
-            <a href="tel:{{ site.phone_number }}"> <span class="fa fa-phone">
+            <!-- <a href="tel:{{ site.phone_number }}"> <span class="fa fa-phone">
                 <i aria-hidden="true" class=""></i> </span>
               <span class="elementor-icon-list-text">{{ site.phone_number }}</span>
-            </a>
+            </a> -->
           </div>
         </a>
     </div>
