--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,13 +1,13 @@
 // Variables
 
 // Main color
-$primary-color: #000;
+$primary-color: rgb(139, 222, 231);
 
 // Anchor color
-$secondary-color: #00cdff;
+$secondary-color: #ad1e1e;
 
 // Font color
-$font-color: #fff;
+$font-color: rgb(0, 0, 0);
 
 $navbar-text-shadow: true;
 $header-text-shadow: true;
