--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -4,30 +4,22 @@
   <div class="elementor-widget-container">
     <h3 class="elementor-heading-title elementor-size-default">Contact Us</h3>		</div>
   <div class="" data-id="2fe7a638" data-element_type="widget" data-widget_type="icon-list.default">
-    <div class="elementor-widget-container">
-      <li class="elementor-icon-list-item">
-        <span class="elementor-icon-list-icon">
-        
-          <a href="tel:{{ site.phone_number }}"> <span class="fa fa-phone">
-              <i aria-hidden="true" class=""></i> </span>
-            <span class="elementor-icon-list-text">{{ site.phone_number }}</span>
-          </a>
-        </li> 
-        <li class="elementor-icon-list-item">
-          <a href="mailto:{{ site.email }}">
-            <span class="fa fa-envelope">
-              <i aria-hidden="true" class=""></i>
-            </span>
-            <span class="elementor-icon-list-text">{{ site.email }}</span>
-          </a>
-         </li>
-        <li class="elementor-icon-list-item">
-          <span class="fa fa-map-marker">
-            <i aria-hidden="true" class=""></i> </span>
-          <span class="elementor-icon-list-text">{{ site.location }}</span>
-        </li>
-      </ul>
-    </div>
+    <table>
+      <div class="elementor-widget-container">
+        <a></a></br>
+        <a></a></br>
+        <a style="font-size:25px;" href="https://www.google.com/maps/dir/37.3213662,-121.9814348/2651+Barcells+Ave,+Santa+Clara,+CA+95051/@37.3297358,-121.9838762,15z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x808fca60d261d4f7:0x7ccddd9a888274bf!2m2!1d-121.9722611!2d37.3384229"
+          class="fa fa-map-marker" target="_blank">
+          {{ site.location }}
+        </a></br>
+        <a href="mailto:{{ site.email }}" class="fa fa-envelope" style="font-size:25px;">
+          {{ site.email }}
+        </a></br>
+        <a href="tel:{{ site.phone_number }}" class="fa fa-phone" style="font-size:25px;">
+          {{ site.phone_number }}
+        </a>
+      </div>
+    </table>
   </div>
 </section>
 
