--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -1,10 +1,17 @@
 
 <!-- Timeline Start -->
 
-<section id="{{ page.section-type }}" class="container content-section text-center">
+<section id="{{ page.section-type }}" class="container text-center">
+  <a class="center" style="font-size:40px;" >
+    {{ content }}
+  </a>
   <div class="row">
+    <a></a></br>
+    <a></a></br>
+    <a></a></br>
+    <a></a></br>
     <div class="col-md-10 col-md-offset-1">
-
+      
       {{ page.content | markdownify }}
 
       <ul class="timeline">
@@ -41,5 +48,11 @@
     </div>
   </div>
 </section>
-
+<style>
+  .center {
+    margin: auto;
+    width: 60%;
+    padding: 10px;
+  }
+  </style>
 <!-- Timeline End -->
