Changing href for location

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -24,7 +24,7 @@
           <u>{{ site.phone_number }}</u>
         </a></br>
         <a></a></br>
-        <a style="font-size:20px;" href="https://www.google.com/maps/dir/37.3213662,-121.9814348/2651+Barcells+Ave,+Santa+Clara,+CA+95051/@37.3297358,-121.9838762,15z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x808fca60d261d4f7:0x7ccddd9a888274bf!2m2!1d-121.9722611!2d37.3384229"
+        <a style="font-size:20px;" href="https://www.google.com/maps/dir//2651+Barcells+Ave,+Santa+Clara,+CA+95051/@37.3384271,-121.9744498,17z/data=!4m9!4m8!1m0!1m5!1m1!1s0x808fca60d261d4f7:0x7ccddd9a888274bf!2m2!1d-121.9722611!2d37.3384229!3e0"
           class="fa fa-map-marker" target="_blank">
           <u>{{ site.location }}</u>
         </a></br>
