Changing title, updating keywords, Adding social media bubuttons, updating services

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,7 +8,7 @@
     </div>
     <img src="/img/notaryBanner.jpg" alt="">
   </div>
-  <p><em>Keywords: POA documentation, living trust, notary Santa Clara, notary Cupertino, notary Campbell, notary near me, OCi, passport renewal, loan signing documents, Taiwan passport renewal</em></p>
+  <p><em>Keywords: POA documentation, living trust, notary Santa Clara, notary Cupertino, notary Campbell, notary near me, OCi, passport renewal, loan signing documents, Taiwan passport renewal, Mobile notary ,Last will, Notary mountainview, notary Palo Alto</em></p>
 </section>
 
 <!-- About End -->
